--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ excerpt_separator: "\n\n\n\n"
 
 
 ### self params
-site_name: kissdata
-site_description: keep it simple &#38; stupied by data | 爱小牛牛，爱生活
-url: http://blog.kissdata.com
-author: vincentzhwg
-author_github_url: https://github.com/vincentzhwg
-author_email: vincentzhwg@gmail.com
+site_name: gulangtingtao
+site_description: Pound; Listen to the waves | 鼓浪听涛
+url: http://gulangtingtao.github.io/
+author: gulangtingtao
+author_github_url: https://github.com/gulangtingtao
+author_email: gulangtingtaoig@gmail.com
 
 ## if you don't want something below, just comment it or delete it. But if you want to use, please change your ids.
-duoshuo_short_name: kissdata
-#disqus_shortname: kissdata
+duoshuo_short_name: gulangtingtao
+#disqus_shortname: gulangtingtao
 #google_analytics_ua: UA-52060953-1
 cnzz_id: 1253396463
 
@@ -80,5 +80,5 @@ defaults:
             path: "dada"
         values:
             layout: "dada_page"
-            category: "小牛牛的happiness"
+            category: "鼓浪听涛的happiness"
 
