--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ excerpt_separator: "\n\n\n\n"
 
 ### self params
 site_name: gulangtingtao
-site_description: Pound &#38;;Listen to the waves | 鼓浪听涛
+site_description: Pound &#38;Listen to the waves | 鼓浪听涛
 url: http://gulangtingtao.github.io/
 author: gulangtingtao
 author_github_url: https://github.com/gulangtingtao
