--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author_email: gulangtingtaoig@gmail.com
 
 ## if you don't want something below, just comment it or delete it. But if you want to use, please change your ids.
 duoshuo_short_name: gulangtingtao
-#disqus_shortname: gulangtingtao
+disqus_shortname: gulangtingtao
 #google_analytics_ua: UA-52060953-1
 #cnzz_id: 1253396463
 
