--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author_email: gulangtingtaoig@gmail.com
 duoshuo_short_name: gulangtingtao
 disqus_shortname: gulangtingtao
 #google_analytics_ua: UA-52060953-1
-#cnzz_id: 1253396463
+cnzz_id: 1253396463
 
 
 
